--- a/CheckMates/Base.lproj/LaunchScreen.storyboard
+++ b/CheckMates/Base.lproj/LaunchScreen.storyboard
@@ -27,12 +27,12 @@
                         <color key="backgroundColor" red="0.0" green="0.45882352941176469" blue="0.99607843137254903" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="0Dg-DC-Y3F" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="5ZI-39-80v"/>
+                            <constraint firstItem="0Dg-DC-Y3F" firstAttribute="bottom" secondItem="xb3-aO-Qok" secondAttribute="top" id="Fjx-yH-QkS"/>
                             <constraint firstItem="0Dg-DC-Y3F" firstAttribute="trailing" secondItem="UrL-45-Jdv" secondAttribute="trailing" id="GgO-Ty-uaQ"/>
                             <constraint firstAttribute="bottom" secondItem="UrL-45-Jdv" secondAttribute="bottom" constant="20" symbolic="YES" id="SsM-lR-gNC"/>
-                            <constraint firstItem="0Dg-DC-Y3F" firstAttribute="bottom" secondItem="xb3-aO-Qok" secondAttribute="top" id="UxJ-3J-R8K"/>
                             <constraint firstItem="0Dg-DC-Y3F" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="dO3-6H-Xgf"/>
                             <constraint firstAttribute="trailing" secondItem="0Dg-DC-Y3F" secondAttribute="trailing" id="syT-zP-r2Q"/>
-                            <constraint firstItem="UrL-45-Jdv" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="432" id="uIQ-RI-3oS"/>
+                            <constraint firstItem="UrL-45-Jdv" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="432" id="vaA-4M-b7e"/>
                             <constraint firstItem="0Dg-DC-Y3F" firstAttribute="leading" secondItem="UrL-45-Jdv" secondAttribute="leading" id="wJV-6N-GbC"/>
                         </constraints>
                     </view>
