--- a/CheckMates/Base.lproj/Main.storyboard
+++ b/CheckMates/Base.lproj/Main.storyboard
@@ -7,38 +7,6 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Receipts-->
-        <scene sceneID="lBc-bA-oOl">
-            <objects>
-                <viewController storyboardIdentifier="receiptsVC" id="5Gh-Nc-Pbt" customClass="ReceiptsViewController" customModule="CheckMates" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="W9Z-gW-4fk"/>
-                        <viewControllerLayoutGuide type="bottom" id="coP-pv-d8X"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="ybd-gH-o56">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="View Receipts" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cQa-y4-QFP">
-                                <rect key="frame" x="0.0" y="20" width="600" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="trailing" secondItem="cQa-y4-QFP" secondAttribute="trailing" id="IId-u2-pYA"/>
-                            <constraint firstItem="cQa-y4-QFP" firstAttribute="top" secondItem="W9Z-gW-4fk" secondAttribute="bottom" id="MFT-bE-zLB"/>
-                            <constraint firstItem="cQa-y4-QFP" firstAttribute="leading" secondItem="ybd-gH-o56" secondAttribute="leading" id="MXq-b9-l59"/>
-                        </constraints>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Receipts" image="ReceiptIcon" id="P4H-4C-EBR"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="efM-tH-Kbc" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1143" y="-542"/>
-        </scene>
         <!--CheckMates-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -81,6 +49,34 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1952" y="123"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="VhZ-Ma-MAo">
+            <objects>
+                <tableViewController id="VWL-WR-EWk" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="6Pd-hD-Vl4">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="CIN-6a-Ar0">
+                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="CIN-6a-Ar0" id="YhT-SA-kS9">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="VWL-WR-EWk" id="70j-oK-iy4"/>
+                            <outlet property="delegate" destination="VWL-WR-EWk" id="GRz-mB-NIr"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9XK-nr-YQb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1960" y="-547"/>
         </scene>
         <!--Receipts-->
         <scene sceneID="CZp-7I-yyA">
@@ -219,7 +215,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z2d-Me-2dn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3002" y="903"/>
+            <point key="canvasLocation" x="3459" y="881"/>
         </scene>
         <!--Item Detail View Controller-->
         <scene sceneID="cwJ-8C-0BF">
@@ -392,7 +388,7 @@
             </objects>
             <point key="canvasLocation" x="3365" y="123"/>
         </scene>
-        <!--Enter Receipt-->
+        <!--Add Receipts View Controller-->
         <scene sceneID="aIh-Vr-pNH">
             <objects>
                 <viewController storyboardIdentifier="enterreceiptvc" id="ZsR-Ol-0cW" customClass="AddReceiptsViewController" customModule="CheckMates" customModuleProvider="target" sceneMemberID="viewController">
@@ -404,40 +400,53 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Receipt" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p3N-tP-StT">
-                                <rect key="frame" x="0.0" y="20" width="600" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MNB-Cl-86E">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch Image" translatesAutoresizingMaskIntoConstraints="NO" id="Es1-Ix-ZSe">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.45882352939999999" blue="0.99607843139999996" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Es1-Ix-ZSe" secondAttribute="trailing" id="0te-ut-13R"/>
+                                    <constraint firstItem="Es1-Ix-ZSe" firstAttribute="top" secondItem="MNB-Cl-86E" secondAttribute="top" id="3n2-pW-f1o"/>
+                                    <constraint firstAttribute="bottom" secondItem="Es1-Ix-ZSe" secondAttribute="bottom" id="8S2-bS-AQc"/>
+                                    <constraint firstItem="Es1-Ix-ZSe" firstAttribute="leading" secondItem="MNB-Cl-86E" secondAttribute="leading" id="h84-Vc-yXS"/>
+                                </constraints>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.058823529409999999" green="0.47450980390000003" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="p3N-tP-StT" secondAttribute="trailing" id="UVV-tb-TAi"/>
-                            <constraint firstItem="p3N-tP-StT" firstAttribute="leading" secondItem="nCV-tK-Wcg" secondAttribute="leading" id="eSm-bU-89u"/>
-                            <constraint firstItem="p3N-tP-StT" firstAttribute="top" secondItem="eBT-Cb-cxo" secondAttribute="bottom" id="p3C-OT-Ek0"/>
+                            <constraint firstAttribute="trailing" secondItem="MNB-Cl-86E" secondAttribute="trailing" id="8Vi-yP-ahy"/>
+                            <constraint firstItem="MNB-Cl-86E" firstAttribute="leading" secondItem="nCV-tK-Wcg" secondAttribute="leading" id="9PS-bG-ITf"/>
+                            <constraint firstItem="MNB-Cl-86E" firstAttribute="top" secondItem="nCV-tK-Wcg" secondAttribute="top" id="TEj-jq-HQj"/>
+                            <constraint firstAttribute="bottom" secondItem="MNB-Cl-86E" secondAttribute="bottom" id="dat-0Q-XeT"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Enter Receipt" image="PointerIcon" id="tO3-ke-EUr"/>
+                    <navigationItem key="navigationItem" id="AZC-yP-k03"/>
+                    <connections>
+                        <segue destination="GTV-18-SEv" kind="show" identifier="AddReceiptManually" id="Zmn-gq-eIc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tpq-V2-dKk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1128" y="903"/>
+            <point key="canvasLocation" x="1940" y="903"/>
         </scene>
         <!--Tab Controller-->
         <scene sceneID="d0o-Fv-NkE">
             <objects>
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="C5c-Ns-eeS" customClass="TabController" customModule="CheckMates" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="mkj-HC-MHt">
+                    <tabBar key="tabBar" tag="10" contentMode="scaleToFill" id="mkj-HC-MHt">
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <color key="selectedImageTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="ZsR-Ol-0cW" kind="relationship" relationship="viewControllers" id="cgf-0p-MO5"/>
+                        <segue destination="TnY-6o-2O7" kind="relationship" relationship="viewControllers" id="cgf-0p-MO5"/>
                         <segue destination="pgt-jY-sQP" kind="relationship" relationship="viewControllers" id="XVf-Cu-H7Y"/>
-                        <segue destination="5Gh-Nc-Pbt" kind="relationship" relationship="viewControllers" id="2tB-df-Dml"/>
+                        <segue destination="u2v-Nf-W0c" kind="relationship" relationship="viewControllers" id="2tB-df-Dml"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ddQ-Q6-eVm" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -447,8 +456,8 @@
         <!--Snap Receipt-->
         <scene sceneID="fX4-Tb-49G">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="pgt-jY-sQP" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Snap Receipt" image="CameraIcon" id="sOf-FE-HZS"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="pgt-jY-sQP" customClass="SnapReceiptsNavigationController" customModule="CheckMates" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" tag="2" title="Snap Receipt" image="CameraIcon" id="sOf-FE-HZS"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="qKX-aB-znU">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -463,27 +472,52 @@
             </objects>
             <point key="canvasLocation" x="1140" y="123"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="u3D-f1-kUD">
+        <!--Enter Receipt-->
+        <scene sceneID="dpc-DW-byB">
             <objects>
-                <viewController id="6ls-8Y-Uxf" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="aOc-wr-agT"/>
-                        <viewControllerLayoutGuide type="bottom" id="QUa-7I-EHs"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="doM-fd-0TP">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="I0X-zU-TVF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TnY-6o-2O7" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" tag="1" title="Enter Receipt" image="PointerIcon" id="tO3-ke-EUr"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="5tQ-IK-cGl">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ZsR-Ol-0cW" kind="relationship" relationship="rootViewController" id="6cN-BT-1aA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="toI-aQ-vNC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1140" y="903"/>
+        </scene>
+        <!--Receipts-->
+        <scene sceneID="aXv-oj-Uvs">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="u2v-Nf-W0c" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" tag="3" title="Receipts" image="ReceiptIcon" id="P4H-4C-EBR"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="GQ8-wE-Ja6">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="VWL-WR-EWk" kind="show" identifier="ShowReceipts" id="mkF-Ml-biD"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rrd-7i-v6k" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1140" y="-547"/>
         </scene>
     </scenes>
     <resources>
         <image name="CameraIcon" width="25" height="25"/>
+        <image name="Launch Image" width="121" height="121"/>
         <image name="PointerIcon" width="25" height="25"/>
         <image name="ReceiptIcon" width="25" height="25"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="Zmn-gq-eIc"/>
+    </inferredMetricsTieBreakers>
 </document>
